fixed pages alignment

--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -1,4 +1,7 @@
 .pageProfile {
+  align-content: center;
+  height: 100%;
+  display: grid;
   .preloader {
     position: absolute;
     z-index: 1;
